2017-11-02 Daniel Veillard  <veillard@redhat.com>
    
    Release of libvirt-python-3.9.0
    
    
2017-09-29 Nir Soffer  <nirsof@gmail.com>
    
    Unify whitespace around *_ALLOW_THREADS macros
    Most of the code treats libvirt API calls as separate block, keeping one
    blank line before the LIBVIRT_BEGIN_ALLOW_THREAD, and one blank line
    after LIBVIRT_END_ALLOW_THREADS. Unify the whitespace so all calls
    wrapped with these macros are treated as a separate block.
    
    
2017-09-27 Nir Soffer  <nirsof@gmail.com>
    
    Release the GIL during virDomainGetMemoryStats & virDomainGetDiskErrors
    We discovered that the entire python process get stuck for about 30
    seconds when calling virDomain.getMemoryStats() if libvirt is stuck in
    virConnect.getAllDomainStats() on inaccessible storage. This blocking
    cause a horrible mess in oVirt.
    
    This patches adds the standard *_ALLOW_THREADS around the call to avoid
    this unwanted blocking.
    
    
    
2017-09-26 Daniel P. Berrange  <berrange@redhat.com>
    
    Avoid implicit treatment of an arithmetic result as a boolean
    Latest GCC versions are unhappy with us treating an integer
    arithmetic result as a boolean:
    
    libvirt-utils.c: In function ‘virReallocN’:
    libvirt-utils.c:111:23: warning: ‘*’ in boolean context, suggest ‘&&’ instead [-Wint-in-bool-context]
    if (!tmp && (size * count)) {
    ~~~~~~^~~~~~~~
    
    Add an explicit comparison '!= 0' to keep it happy, since its
    suggestion to use '&&' is nonsense.
    
    
    
2017-09-26 Daniel P. Berrange  <berrange@redhat.com>
    
    Fix comparisons between signed & unsigned integers
    When python3 builds C modules, it adds the -Wsign-compare flag to GCC.
    This creates lots of warnings where we compare a 'size_t' value against
    an 'int' value due to signed/unsigned difference.  Change all the size_t
    types to ssize_t to address this.
    
    
    